--- a/ProjectTest/pom.xml
+++ b/ProjectTest/pom.xml
@@ -95,6 +95,17 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 	</dependencies>
 
 	<build />
