--- a/ProjectTest/pom.xml
+++ b/ProjectTest/pom.xml
@@ -34,6 +34,9 @@
 		</dependency>
 
 
+
+
+		<!--Quartz版本 -->
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
@@ -46,7 +49,7 @@
 		</dependency>
 
 
-
+		<!--Spring版本 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
