--- a/ProjectTest/pom.xml
+++ b/ProjectTest/pom.xml
@@ -145,6 +145,17 @@
 			<version>3.4.6</version>
 		</dependency>
 		<dependency>
+			<groupId>com.alipay.zdal</groupId>
+			<artifactId>zdal-client</artifactId>
+			<version>1.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>com.netflix.curator</groupId>
 			<artifactId>curator-framework</artifactId>
 			<version>1.1.16</version>
@@ -302,6 +313,34 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>war</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
@@ -338,19 +377,22 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
+		<finalName>ProjectTest</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.xml</include>
 				</includes>
-				<filtering>true</filtering>
+				<!-- <filtering>true</filtering> -->
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.xsd</include>
 					<include>**/*.properties</include>
+					<!-- <filtering>true</filtering> -->
 				</includes>
 			</resource>
 		</resources>
